--- a/index.qmd
+++ b/index.qmd
@@ -45,13 +45,15 @@ The five units to be translated and adapted are:
 
 5.  **Building a Deterministic Model**
 
-##**INSTITUTIONS**
+## **INSTITUTIONS**
 
-![](./img/data.org.png){width="200"}
-
-![](./img/javeriana.png){width="200"}
-
-![](./img/MRC.png){width="200"}
+```{.partners}
+<img src="data.org.png" alt="data.org" style="max-width: 150px; margin: 0 10px;">
+<img src="MRC.png" alt="MRC" style="max-width: 150px; margin: 0 10px;">
+<img src="andes.png" alt="Universidad de los Andes" style="max-width: 150px; margin: 0 10px;">
+<img src="javeriana.png" alt="Pontificia Universidad Javeriana" style="max-width: 150px; margin: 0 10px;">
+```
+<style> .partners { display: flex; justify-content: space-around; align-items: center; margin: 20px 0; } </style>
 
 ## **Contact information**
 
