--- a/index.qmd
+++ b/index.qmd
@@ -53,7 +53,7 @@ The five units to be translated and adapted are:
   justify-content: space-around;
   align-items: center;
   margin: 20px 0;
-  background-color: #999999;
+  background-color: #ffffff;
   padding: 40px;
   border-radius: 10px;
 }
@@ -67,7 +67,7 @@ The five units to be translated and adapted are:
 }
 
 .partner img {
-  max-width: 150px;
+  max-height: 150px;
   margin-bottom: 10px;
 }
 
@@ -78,16 +78,13 @@ The five units to be translated and adapted are:
 
 <div class="partners-container">
   <div class="partner">
-  ![](img/data.org.png){width=150}
-<p>data.org</p>
+  ![](img/data.org.png){height=150}
   </div>
   <div class="partner">
-  ![](img/MRC.png){width=150}    
-<p>MRC Unit<br>The Gambia</p>
+  ![](img/MRC.png){height=150}    
   </div>
 <div class="partner">
-  ![](img/javeriana.png){width=150}
-<p>Pontificia Universidad Javeriana</p>
+  ![](img/javeriana.png){height=150}
   </div>
 </div>
 
