--- a/index.qmd
+++ b/index.qmd
@@ -78,13 +78,13 @@ The five units to be translated and adapted are:
 
 <div class="partners-container">
   <div class="partner">
-  ![](img/data.org.png){height=150}
+  ![](img/data.org.png){width =150}
   </div>
   <div class="partner">
-  ![](img/MRC.png){height=150}    
+  ![](img/MRC.png){width =250}    
   </div>
 <div class="partner">
-  ![](img/javeriana.png){height=150}
+  ![](img/javeriana.png){width=150}
   </div>
 </div>
 
