--- a/index.qmd
+++ b/index.qmd
@@ -68,6 +68,7 @@ The five units to be translated and adapted are:
 
 .partner img {
   margin-bottom: 10px;
+  object-fit: contain; /* Para mantener la proporción de la imagen */
 }
 
 .partner p {
@@ -77,16 +78,15 @@ The five units to be translated and adapted are:
 
 <div class="partners-container">
   <div class="partner">
-  ![](img/data.org.png){width =100}
+ ![](img/data.org.png){height =150px} 
+</div>
+  <div class="partner">
+  ![](img/MRC.png){width =150px}     
   </div>
   <div class="partner">
-  ![](img/MRC.png){width =250}    
-  </div>
-<div class="partner">
-  ![](img/javeriana.png){width=200}
+      ![](img/javeriana.png){height=150px}
   </div>
 </div>
-
 
 
 ## **Contact information**
