--- a/index.qmd
+++ b/index.qmd
@@ -78,13 +78,13 @@ The five units to be translated and adapted are:
 
 <div class="partners-container">
   <div class="partner">
-    ![](img/data.org.png){height ="200"} 
+    ![](img/data.org.png){height =200px} 
   </div>
   <div class="partner">
-    ![](img/MRC.png){width ="250"}     
+    ![](img/MRC.png){width =250px}     
   </div>
   <div class="partner">
-    ![](img/javeriana.png){height="250"}
+    ![](img/javeriana.png){height =250px}
   </div>
 </div>
 
