--- a/index.qmd
+++ b/index.qmd
@@ -106,12 +106,12 @@ To facilitate access to the adapted EpiTKit units in English and French, the Ati
 
 | Language | Unit Title                                                                 | Link                                                                 |
 |----------|----------------------------------------------------------------------------|----------------------------------------------------------------------|
-| English  | Introduction to Infectious Disease Modelling for Public Health            | [Enroll here](https://online.atingi.org/enrol/index.php?id=6015)     |
+| English  | Introduction to Epidemic Theory            | [Enroll here](https://online.atingi.org/enrol/index.php?id=6015)     |
 | English  | General Epidemiology Applied to Infectious Diseases                       | [Enroll here](https://online.atingi.org/enrol/index.php?id=6121)     |
 | English  | Introduction to Statistics and Probability                                | Coming soon                                                          |
 | English  | Parameters                                                                 | Coming soon                                                          |
 | English  | Building a Deterministic Model                                             | Coming soon                                                          |
-| French   | Introduction à la modélisation des maladies infectieuses pour la santé publique | [S’inscrire ici](https://online.atingi.org/enrol/index.php?id=6067)   |
+| French   | Introduction à la théorie des épidémies | [S’inscrire ici](https://online.atingi.org/enrol/index.php?id=6067)   |
 | French   | Épidémiologie générale appliquée aux maladies infectieuses                | [S’inscrire ici](https://online.atingi.org/enrol/index.php?id=6135)  |
 | French   | Introduction aux statistiques et probabilités                             | À venir                                                              |
 | French   | Paramètres                                                                 | À venir                                                              |
